<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center_vertical">

    <TextView
        android:id="@+id/confirmText"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="25dp"/>

    <Button
        android:id="@+id/nextButton"
        android:layout_width="320dp"
        android:layout_height="56dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/next"
        android:textColor="@color/white"
        android:backgroundTint="@color/purple_500"
        android:bottomRightRadius="15dp"
        android:bottomLeftRadius="15dp"
        android:topLeftRadius="15dp"
        android:topRightRadius="15dp"
        android:layout_marginBottom="10dp"/>

</LinearLayout>