<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center_vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/idEditText"
        android:layout_width="320dp"
        android:layout_height="54dp"
        android:layout_marginBottom="10dp"
        android:height="48dp"
        android:layout_gravity="center_horizontal"
        android:autofillHints=""
        android:hint="@string/id"
        android:inputType="text"
        android:padding="15dp" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="320dp"
        android:layout_height="58dp"
        android:layout_gravity="center_horizontal"
        android:backgroundTint="@color/purple_500"
        android:textColor="@color/white"
        android:bottomRightRadius="15dp"
        android:bottomLeftRadius="15dp"
        android:topLeftRadius="15dp"
        android:topRightRadius="15dp"
        android:layout_marginBottom="10dp"
        android:text="@string/register" />

</LinearLayout>